
  - Column() requires a type if it has no foreign keys (this is 
    not new).  An error is now raised if a Column() has no type
    and no foreign keys.  [ticket:1705]
    
  - the "scale" argument of the Numeric() type is honored when 
    coercing a returned floating point value into a string 
    on its way to Decimal - this allows accuracy to function
    on SQLite, MySQL.  [ticket:1717]
    
- engines
  - Added an optional C extension to speed up the sql layer by
    reimplementing RowProxy and the most common result processors.
    The actual speedups will depend heavily on your DBAPI and
    the mix of datatypes used in your tables, and can vary from
    a 30% improvement to more than 200%.  It also provides a modest
    (~15-20%) indirect improvement to ORM speed for large queries.
    Note that it is *not* built/installed by default.
    See README for installation instructions.

  - the execution sequence pulls all rowcount/last inserted ID
    info from the cursor before commit() is called on the 
    DBAPI connection in an "autocommit" scenario.  This helps 
    mxodbc with rowcount and is probably a good idea overall.
    
  - Opened up logging a bit such that isEnabledFor() is called 
    more often, so that changes to the log level for engine/pool
    will be reflected on next connect.   This adds a small 
    amount of method call overhead.  It's negligible and will make
    life a lot easier for all those situations when logging 
    just happens to be configured after create_engine() is called.
    [ticket:1719]
    
  - The assert_unicode flag is deprecated.  SQLAlchemy will raise
    a warning in all cases where it is asked to encode a non-unicode
    Python string, as well as when a Unicode or UnicodeType type
    is explicitly passed a bytestring.  The String type will do nothing 
    for DBAPIs that already accept Python unicode objects.

  - Bind parameters are sent as a tuple instead of a list. Some